<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lexington</string>
    <string name="action_settings">Settings</string>
    <string name="scan_title">Scan QR Code</string>
    <string name="location_title">Last Scan Location</string>
    <string name="help">Help</string>
    <string name="about">About</string>
	<string name="title_activity_about">About</string>
	<string name="title_activity_map">Map</string>
	<string name="title_activity_help">Help</string>
	<string name="individual_image">Images</string>
	<string name="text_row_activity">View Text</string>
	<string name="audio_video_activity">Audio/Video</string>
	<string name="image_activity">View Image</string>
	<string name="image_zoom_activity">View Image</string>
	<string name="about_text">Developed by the students of TAMUCC for the U.S.S. Lexington</string>
	<string name="capstone">Senior Capstone - Spring 2014</string>
	<string name="raymond">Raymond Garcia - Head &amp; Android Developer</string>
	<string name="andrew">Andrew Cox - iOS Developer</string>
	<string name="yu">Yu Chen - Database &amp; Documentation</string>
	<string name="tony">Tony Saldibar - Documentation</string>
	<string name="loading">Loading&#8230;</string>
	<string name="location">Location of last scan -</string>
</resources>
