<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:id="@+id/text"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal|center"
	        android:gravity="center_horizontal|bottom"
	        android:paddingLeft="20dp"
	        android:text="@string/about_text"
	        android:textSize="@dimen/abc_action_bar_title_text_size" />
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal|bottom"
	        android:paddingBottom="20dp"
	        android:paddingLeft="20dp"
	        android:paddingTop="20dp"
	        android:text="@string/capstone"
	        android:textStyle="italic" />
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
	        android:text="@string/raymond" />
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="bottom|left"
	        android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
	        android:text="@string/andrew" />
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="bottom|left|right"
	        android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
	        android:text="@string/yu" />
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="bottom|left"
	        android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
	        android:text="@string/tony" />
	</LinearLayout>

	<ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/lex"
	    android:layout_marginTop="-70dp"
	    android:cropToPadding="true"
	    android:maxHeight="20dp"
	    android:scaleType="fitCenter"
	    android:src="@drawable/tamucc_logo" />

	<ImageView
	    android:id="@+id/lex"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="false"
	    android:cropToPadding="true"
	    android:maxHeight="20dp"
	    android:scaleType="fitCenter"
	    android:src="@drawable/logo" />

</RelativeLayout>